flex-wrap on sections (fixes index tasks)

--- a/src/routes/style.css
+++ b/src/routes/style.css
@@ -43,6 +43,7 @@ form {
 section {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 1em;
 }
 
